--- a/package.json
+++ b/package.json
@@ -29,11 +29,6 @@
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
     "@date-io/moment": "^1.3.13",
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.56",
-    "@material-ui/pickers": "^3.2.10",
-    "@material-ui/styles": "^4.10.0",
     "@microsoft/signalr": "^3.1.9",
     "@react-hook/debounce": "^4.0.0",
     "@testing-library/jest-dom": "^4.2.4",
@@ -46,8 +41,10 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-input-mask": "^2.0.5",
     "@types/react-router-dom": "^5.1.5",
+    "@types/redux": "^3.6.0",
     "@types/styled-components": "^5.1.1",
     "@types/universal-cookie": "^2.2.0",
+    "antd": "^4.16.13",
     "axios": "^0.19.2",
     "axios-auth-refresh": "^2.2.8",
     "classnames": "^2.3.1",
@@ -55,14 +52,18 @@
     "history": "^5.0.0",
     "lodash": "^4.17.21",
     "lodash.throttle": "^4.1.1",
-    "moment": "^2.27.0",
+    "moment": "^2.29.1",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-howler": "^5.0.0",
     "react-input-mask": "^2.0.4",
+    "react-redux": "^7.2.5",
+    "react-router": "^5.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "redux": "^4.1.1",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.1.1",
     "typescript": "^3.7.5",
     "universal-cookie": "^4.0.3"
