--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL = https://ticktime-is.sysdyn.ru/api/v1/admin
+BASE_URL = http://localhost:8000
 REACT_APP_BASE_PATH = https://ticktime-is.sysdyn.ru/
