--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "crunch": "react-scripts start",
-    "start": "react-scripts start",
+    "start": "node server.js",
+    "start:dev": "react-scripts start",
+    "start:dev-server": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -49,6 +51,7 @@
     "axios-auth-refresh": "^2.2.8",
     "classnames": "^2.3.1",
     "clsx": "^1.1.1",
+    "express": "^4.17.1",
     "history": "^5.0.0",
     "lodash": "^4.17.21",
     "lodash.throttle": "^4.1.1",
