--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "crunch": "react-scripts start",
-    "start": "cross-env NODE_ENV=production node server.js",
+    "start": "node server.js",
     "start:dev": "cross-env NODE_ENV=development react-scripts start",
     "start:dev-server": "node server.js",
     "build": "react-scripts build",
