--- a/package.json
+++ b/package.json
@@ -56,7 +56,6 @@
     "lodash": "^4.17.21",
     "lodash.throttle": "^4.1.1",
     "moment": "^2.29.1",
-    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-howler": "^5.0.0",
@@ -67,6 +66,8 @@
     "react-scripts": "^3.4.1",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
+    "socket.io": "^4.3.1",
+    "socket.io-client": "^4.3.2",
     "styled-components": "^5.1.1",
     "typescript": "^3.7.5",
     "universal-cookie": "^4.0.3"
