--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
     "redux": "^4.1.1",
+    "node-sass": "^4.14.1",
     "redux-thunk": "^2.3.0",
     "socket.io": "^4.3.1",
     "socket.io-client": "^4.3.2",
