--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     ]
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@date-io/date-fns": "^1.3.13",
     "@date-io/moment": "^1.3.13",
     "@microsoft/signalr": "^3.1.9",
