--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "moment": "^2.29.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^7.22.5",
     "react-howler": "^5.0.0",
     "react-input-mask": "^2.0.4",
     "react-redux": "^7.2.5",
@@ -73,13 +74,12 @@
     "socket.io-client": "^4.3.2",
     "styled-components": "^5.1.1",
     "true-case-path": "^2.2.1",
-    "typescript": "^3.7.5",
     "universal-cookie": "^4.0.3"
   },
   "devDependencies": {
     "@types/react-howler": "^3.7.2",
     "cross-env": "^7.0.3",
     "prettier": "2.0.5",
-    "typescript": "^3.9.3"
+    "typescript": "^4.5.4"
   }
 }
