--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "scripts": {
     "crunch": "react-scripts start",
     "start": "node server.js",
-    "start:dev": "react-scripts start",
+    "start:dev": "react-scripts start --port=80",
     "start:dev-server": "node server.js",
-    "build": "react-scripts build",
+    "build": "cross-env REACT_APP_BASE_URL = http:/89.108.98.122:3000 react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "prettier": "prettier \"{src,test}/**/*.{ts,json,tsx,js}\" -c",
@@ -55,12 +55,9 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "history": "^5.0.0",
-    "lodash": "^4.17.21",
-    "lodash.throttle": "^4.1.1",
     "moment": "^2.29.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-hook-form": "^7.22.5",
     "react-howler": "^5.0.0",
     "react-input-mask": "^2.0.4",
     "react-redux": "^7.2.5",
