--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,2 @@
-REACT_APP_BASE_URL = http:/89.108.98.122:3000
+REACT_APP_BASE_URL = http://localhost:3000
+#REACT_APP_BASE_URL = http:/89.108.98.122:3000
